[package]
name = "dsp_playground"
version = "0.1.0"
authors = ["actonDev <chris.actondev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
hound = "3.4.0"
more-asserts = "0.2.1"

[[example]]
name = "hound_read"
path = "examples/hound_read.rs"